GNOME Bugzilla – Bug 778145
st-theme-node: Fix lookup of time values
Last modified: 2017-02-06 13:32:04 UTC
See patch. This fixes theme node transitions that have been broken for a while without anyone noticing.
Created attachment 344871 [details] [review] st-theme-node: Fix lookup of time values We have a time when the content type is seconds *or* milliseconds, not seconds *and* milliseconds. Whoops ...
Review of attachment 344871 [details] [review]: ++
Attachment 344871 [details] pushed as e6e786a - st-theme-node: Fix lookup of time values